@@ -1,3 +1,15 @@
+2003-11-20  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
+
+	* lib/local.h: do not define HAVE_KP_DEFINE
+
+	* lib/flinternal.h: test directly for X11 version here
+
+	* lib/forms.c (fl_keyboard): 
+	* lib/flcolor.c (fl_mapcolor, fl_dump_state_info): 
+	* lib/xpopup.c (fl_addtopup): 
+	* lib/clock.c (draw_clock): use proper ML_xxx macros instead of
+	bogus names
+
 2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>
 
 	* lib/flsnprintf.c: remove unused variable 'credits'.
